--- a/index.css
+++ b/index.css
@@ -17,6 +17,11 @@ main {
     text-align: center;
 }
 
+embed {
+    width: 90%;
+    height: 700px;
+}
+
 footer {
     background-color: #333;
     color: #fff;
