--- a/index.css
+++ b/index.css
@@ -14,6 +14,10 @@ header {
 main {
     font-family: "Comic Sans MS";
     text-align: center;
+    padding: 0;
+}
+
+p {
     font-size: 200px;
 }
 
